# ask-to-api-engine

./: CLAUDE.md  README.md  docker-compose.yml  pom.xml
ask-to-api-engine/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ask-to-api-engine/app/: config.py  dependencies.py  main.py
ask-to-api-engine/app/api/: routes.py
ask-to-api-engine/app/chains/: browse_chain.py  prompts.py
ask-to-api-engine/app/rag/: indexer.py  retriever.py
ask-to-api-engine/app/swagger/: catalog.py  loader.py  models.py
ask-to-api-engine/swagger_specs/: const.json  corp-actions.json
src/main/java/com/asktoapiengine/engine/: AskToApiEngineApplication.java
src/main/java/com/asktoapiengine/engine/ai/browse/api/: BrowseController.java  BrowseRequest.java
src/main/java/com/asktoapiengine/engine/ai/browse/config/: AiBrowseConfig.java  HttpLlmConfig.java  OpenAiConfig.java  VectorStoreConfig.java
src/main/java/com/asktoapiengine/engine/ai/browse/core/: ApiMatch.java  BrowseResultFormatter.java  BrowseService.java  ParamDescriptor.java
src/main/java/com/asktoapiengine/engine/ai/browse/llm/: BrowseLlmService.java  BrowsePromptBuilder.java  BrowseWebClientLlmService.java  LlmClient.java  LlmOutputSanitizer.java  OllamaHttpLlmClient.java  OpenAiChatModelLlmClient.java  OpenAiWebClientLlmClient.java
src/main/resources/: application.yaml
src/main/resources/swagger/: levels.json
src/test/java/com/asktoapiengine/engine/: AskToApiEngineApplicationTests.java
(+8 files in other folders)
