[project]
name = "ask-to-api-engine"
version = "1.0.0"
description = "Natural language API discovery engine powered by RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.32.0,<1.0",
    "langchain>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-postgres>=0.0.12,<1.0",
    "psycopg[binary]>=3.1.0,<4.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
